<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/valor_em_real"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="8sp"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:id="@+id/text_dolar"
        android:textSize="19sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_em_dolar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8sp"
        android:text="@string/valor_em_euro" />

    <TextView
        android:id="@+id/text_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="@string/valor_em_euro" />

    <RelativeLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center">


        <Button
            android:id="@+id/button_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcular" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/button_calculate"
            android:text="@string/limpar_campos" />

    </RelativeLayout>


</LinearLayout>